feat: without jbr